--- a/type-lists/conference.yaml
+++ b/type-lists/conference.yaml
@@ -1,7 +1,8 @@
 ---
 - !ruby/object:MIME::Type
   content-type: x-conference/x-cooltalk
-  friendly: CoolTalk
+  friendly:
+    en: CoolTalk
   encoding: base64
   extensions:
   - ice
