--- a/type-lists/image.yaml
+++ b/type-lists/image.yaml
@@ -1,7 +1,8 @@
 ---
 - !ruby/object:MIME::Type
   content-type: image/bmp
-  friendly: Bitmap Image File
+  friendly:
+    en: Bitmap Image File
   encoding: base64
   extensions:
   - bmp
@@ -11,7 +12,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/cgm
-  friendly: Computer Graphics Metafile
+  friendly:
+    en: Computer Graphics Metafile
   encoding: base64
   extensions:
   - cgm
@@ -60,7 +62,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/g3fax
-  friendly: G3 Fax Image
+  friendly:
+    en: G3 Fax Image
   encoding: base64
   extensions:
   - g3
@@ -76,7 +79,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/gif
-  friendly: Graphics Interchange Format
+  friendly:
+    en: Graphics Interchange Format
   encoding: base64
   extensions:
   - gif
@@ -91,7 +95,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/ief
-  friendly: Image Exchange Format
+  friendly:
+    en: Image Exchange Format
   encoding: base64
   extensions:
   - ief
@@ -120,7 +125,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/jpeg
-  friendly: JPEG Image
+  friendly:
+    en: JPEG Image
   encoding: base64
   extensions:
   - jpeg
@@ -169,7 +175,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/ktx
-  friendly: OpenGL Textures (KTX)
+  friendly:
+    en: OpenGL Textures (KTX)
   encoding: base64
   extensions:
   - ktx
@@ -205,7 +212,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/png
-  friendly: Portable Network Graphics (PNG)
+  friendly:
+    en: Portable Network Graphics (PNG)
   encoding: base64
   extensions:
   - png
@@ -221,7 +229,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/prs.btif
-  friendly: BTIF
+  friendly:
+    en: BTIF
   encoding: base64
   extensions:
   - btif
@@ -269,7 +278,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/svg+xml
-  friendly: Scalable Vector Graphics (SVG)
+  friendly:
+    en: Scalable Vector Graphics (SVG)
   encoding: 8bit
   extensions:
   - svg
@@ -308,7 +318,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/tiff
-  friendly: Tagged Image File Format
+  friendly:
+    en: Tagged Image File Format
   encoding: base64
   extensions:
   - tiff
@@ -338,7 +349,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.adobe.photoshop
-  friendly: Photoshop Document
+  friendly:
+    en: Photoshop Document
   encoding: base64
   extensions:
   - psd
@@ -380,7 +392,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.dece.graphic
-  friendly: DECE Graphic
+  friendly:
+    en: DECE Graphic
   encoding: base64
   extensions:
   - uvg
@@ -408,7 +421,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/vnd.djvu
-  friendly: DjVu
+  friendly:
+    en: DjVu
   encoding: base64
   extensions:
   - djvu
@@ -425,7 +439,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.dvb.subtitle
-  friendly: Close Captioning - Subtitle
+  friendly:
+    en: Close Captioning - Subtitle
   encoding: base64
   extensions:
   - sub
@@ -443,7 +458,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.dwg
-  friendly: DWG Drawing
+  friendly:
+    en: DWG Drawing
   encoding: base64
   extensions:
   - dwg
@@ -459,7 +475,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.dxf
-  friendly: AutoCAD DXF
+  friendly:
+    en: AutoCAD DXF
   encoding: base64
   extensions:
   - dxf
@@ -475,7 +492,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.fastbidsheet
-  friendly: FastBid Sheet
+  friendly:
+    en: FastBid Sheet
   encoding: base64
   extensions:
   - fbs
@@ -491,7 +509,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.fpx
-  friendly: FlashPix
+  friendly:
+    en: FlashPix
   encoding: base64
   extensions:
   - fpx
@@ -507,7 +526,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.fst
-  friendly: FAST Search & Transfer ASA
+  friendly:
+    en: FAST Search & Transfer ASA
   encoding: base64
   extensions:
   - fst
@@ -523,7 +543,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.fujixerox.edmics-mmr
-  friendly: EDMICS 2000
+  friendly:
+    en: EDMICS 2000
   encoding: base64
   extensions:
   - mmr
@@ -539,7 +560,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.fujixerox.edmics-rlc
-  friendly: EDMICS 2000
+  friendly:
+    en: EDMICS 2000
   encoding: base64
   extensions:
   - rlc
@@ -598,7 +620,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.ms-modi
-  friendly: Microsoft Document Imaging Format
+  friendly:
+    en: Microsoft Document Imaging Format
   encoding: base64
   extensions:
   - mdi
@@ -620,7 +643,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/vnd.net-fpx
-  friendly: FlashPix
+  friendly:
+    en: FlashPix
   encoding: base64
   extensions:
   - npx
@@ -736,7 +760,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.wap.wbmp
-  friendly: WAP Bitamp (WBMP)
+  friendly:
+    en: WAP Bitamp (WBMP)
   encoding: base64
   extensions:
   - wbmp
@@ -752,7 +777,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/vnd.xiff
-  friendly: eXtended Image File Format (XIFF)
+  friendly:
+    en: eXtended Image File Format (XIFF)
   encoding: base64
   extensions:
   - xif
@@ -768,7 +794,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: image/webp
-  friendly: WebP Image
+  friendly:
+    en: WebP Image
   encoding: base64
   extensions:
   - webp
@@ -789,14 +816,16 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-cmu-raster
-  friendly: CMU Image
+  friendly:
+    en: CMU Image
   encoding: base64
   extensions:
   - ras
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-cmx
-  friendly: Corel Metafile Exchange (CMX)
+  friendly:
+    en: Corel Metafile Exchange (CMX)
   encoding: base64
   extensions:
   - cmx
@@ -811,7 +840,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-freehand
-  friendly: FreeHand MX
+  friendly:
+    en: FreeHand MX
   encoding: base64
   extensions:
   - fh
@@ -828,7 +858,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-icon
-  friendly: Icon Image
+  friendly:
+    en: Icon Image
   encoding: base64
   extensions:
   - ico
@@ -848,14 +879,16 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-pcx
-  friendly: PCX Image
+  friendly:
+    en: PCX Image
   encoding: base64
   extensions:
   - pcx
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-pict
-  friendly: PICT Image
+  friendly:
+    en: PICT Image
   encoding: base64
   extensions:
   - pct
@@ -863,35 +896,40 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-portable-anymap
-  friendly: Portable Anymap Image
+  friendly:
+    en: Portable Anymap Image
   encoding: base64
   extensions:
   - pnm
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-portable-bitmap
-  friendly: Portable Bitmap Format
+  friendly:
+    en: Portable Bitmap Format
   encoding: base64
   extensions:
   - pbm
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-portable-graymap
-  friendly: Portable Graymap Format
+  friendly:
+    en: Portable Graymap Format
   encoding: base64
   extensions:
   - pgm
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-portable-pixmap
-  friendly: Portable Pixmap Format
+  friendly:
+    en: Portable Pixmap Format
   encoding: base64
   extensions:
   - ppm
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-rgb
-  friendly: Silicon Graphics RGB Bitmap
+  friendly:
+    en: Silicon Graphics RGB Bitmap
   encoding: base64
   extensions:
   - rgb
@@ -920,7 +958,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-xbitmap
-  friendly: X BitMap
+  friendly:
+    en: X BitMap
   encoding: 7bit
   extensions:
   - xbm
@@ -941,14 +980,16 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-xpixmap
-  friendly: X PixMap
+  friendly:
+    en: X PixMap
   encoding: 8bit
   extensions:
   - xpm
   registered: false
 - !ruby/object:MIME::Type
   content-type: image/x-xwindowdump
-  friendly: X Window Dump
+  friendly:
+    en: X Window Dump
   encoding: base64
   extensions:
   - xwd
