--- a/type-lists/message.yaml
+++ b/type-lists/message.yaml
@@ -185,7 +185,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: message/rfc822
-  friendly: Email Message
+  friendly:
+    en: Email Message
   encoding: 8bit
   extensions:
   - eml
