--- a/type-lists/video.yaml
+++ b/type-lists/video.yaml
@@ -14,7 +14,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/3gpp
-  friendly: 3GP
+  friendly:
+    en: 3GP
   encoding: base64
   extensions:
   - 3gp
@@ -46,7 +47,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/3gpp2
-  friendly: 3GP2
+  friendly:
+    en: 3GP2
   encoding: base64
   extensions:
   - 3g2
@@ -163,7 +165,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/H261
-  friendly: H.261
+  friendly:
+    en: H.261
   encoding: base64
   extensions:
   - h261
@@ -179,7 +182,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/H263
-  friendly: H.263
+  friendly:
+    en: H.263
   encoding: base64
   extensions:
   - h263
@@ -221,7 +225,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/H264
-  friendly: H.264
+  friendly:
+    en: H.264
   encoding: base64
   extensions:
   - h264
@@ -278,7 +283,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/JPEG
-  friendly: JPGVideo
+  friendly:
+    en: JPGVideo
   encoding: base64
   extensions:
   - jpgv
@@ -309,7 +315,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/jpm
-  friendly: JPEG 2000 Compound Image File Format
+  friendly:
+    en: JPEG 2000 Compound Image File Format
   encoding: base64
   extensions:
   - jpgm
@@ -317,7 +324,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/MJ2
-  friendly: Motion JPEG 2000
+  friendly:
+    en: Motion JPEG 2000
   encoding: base64
   extensions:
   - mj2
@@ -375,7 +383,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/mp4
-  friendly: MPEG-4 Video
+  friendly:
+    en: MPEG-4 Video
   encoding: base64
   extensions:
   - mp4
@@ -410,7 +419,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/mpeg
-  friendly: MPEG Video
+  friendly:
+    en: MPEG Video
   encoding: base64
   extensions:
   - mp2
@@ -470,7 +480,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/ogg
-  friendly: Ogg Video
+  friendly:
+    en: Ogg Video
   encoding: base64
   extensions:
   - ogg
@@ -510,7 +521,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/quicktime
-  friendly: Quicktime Video
+  friendly:
+    en: Quicktime Video
   encoding: base64
   extensions:
   - qt
@@ -644,7 +656,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/vnd.dece.hd
-  friendly: DECE High Definition Video
+  friendly:
+    en: DECE High Definition Video
   encoding: base64
   extensions:
   - uvh
@@ -661,7 +674,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/vnd.dece.mobile
-  friendly: DECE Mobile Video
+  friendly:
+    en: DECE Mobile Video
   encoding: base64
   extensions:
   - uvm
@@ -691,7 +705,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/vnd.dece.pd
-  friendly: DECE PD Video
+  friendly:
+    en: DECE PD Video
   encoding: base64
   extensions:
   - uvp
@@ -708,7 +723,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/vnd.dece.sd
-  friendly: DECE SD Video
+  friendly:
+    en: DECE SD Video
   encoding: base64
   extensions:
   - uvs
@@ -725,7 +741,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/vnd.dece.video
-  friendly: DECE Video
+  friendly:
+    en: DECE Video
   encoding: base64
   extensions:
   - uvv
@@ -798,7 +815,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/vnd.fvt
-  friendly: FAST Search & Transfer ASA
+  friendly:
+    en: FAST Search & Transfer ASA
   encoding: base64
   extensions:
   - fvt
@@ -931,7 +949,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/vnd.mpegurl
-  friendly: MPEG Url
+  friendly:
+    en: MPEG Url
   encoding: 8bit
   extensions:
   - mxu
@@ -948,7 +967,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/vnd.ms-playready.media.pyv
-  friendly: Microsoft PlayReady Ecosystem Video
+  friendly:
+    en: Microsoft PlayReady Ecosystem Video
   encoding: base64
   extensions:
   - pyv
@@ -1098,7 +1118,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/vnd.uvvu.mp4
-  friendly: DECE MP4
+  friendly:
+    en: DECE MP4
   encoding: base64
   extensions:
   - uvu
@@ -1115,7 +1136,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/vnd.vivo
-  friendly: Vivo
+  friendly:
+    en: Vivo
   encoding: base64
   extensions:
   - viv
@@ -1132,7 +1154,8 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: video/webm
-  friendly: Open Web Media Project - Video
+  friendly:
+    en: Open Web Media Project - Video
   encoding: base64
   extensions:
   - webm
@@ -1155,21 +1178,24 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-f4v
-  friendly: Flash Video
+  friendly:
+    en: Flash Video
   encoding: base64
   extensions:
   - f4v
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-fli
-  friendly: FLI/FLC Animation Format
+  friendly:
+    en: FLI/FLC Animation Format
   encoding: base64
   extensions:
   - fli
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-flv
-  friendly: Flash Video
+  friendly:
+    en: Flash Video
   encoding: base64
   extensions:
   - flv
@@ -1188,7 +1214,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-m4v
-  friendly: M4v
+  friendly:
+    en: M4v
   encoding: base64
   extensions:
   - m4v
@@ -1216,7 +1243,8 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-ms-asf
-  friendly: Microsoft Advanced Systems Format (ASF)
+  friendly:
+    en: Microsoft Advanced Systems Format (ASF)
   encoding: base64
   extensions:
   - asf
@@ -1230,42 +1258,48 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-ms-wm
-  friendly: Microsoft Windows Media
+  friendly:
+    en: Microsoft Windows Media
   encoding: base64
   extensions:
   - wm
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-ms-wmv
-  friendly: Microsoft Windows Media Video
+  friendly:
+    en: Microsoft Windows Media Video
   encoding: base64
   extensions:
   - wmv
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-ms-wmx
-  friendly: Microsoft Windows Media Audio/Video Playlist
+  friendly:
+    en: Microsoft Windows Media Audio/Video Playlist
   encoding: base64
   extensions:
   - wmx
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-ms-wvx
-  friendly: Microsoft Windows Media Video Playlist
+  friendly:
+    en: Microsoft Windows Media Video Playlist
   encoding: base64
   extensions:
   - wvx
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-msvideo
-  friendly: Audio Video Interleave (AVI)
+  friendly:
+    en: Audio Video Interleave (AVI)
   encoding: base64
   extensions:
   - avi
   registered: false
 - !ruby/object:MIME::Type
   content-type: video/x-sgi-movie
-  friendly: SGI Movie
+  friendly:
+    en: SGI Movie
   encoding: base64
   extensions:
   - movie
